--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-loading": "^2.0.3",
+    "react-markdown": "^9.0.0",
     "react-modal": "^3.16.1",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.17.0",
